kubernetes/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    #kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  name: solar-system
  namespace: {NAMESPACE}
spec:
    ingressClassName: "nginx"
    rules:
    - host: a5d9097a40741450284686479be67545-8c4a3a33b5aad34a.elb.us-east-1.amazonaws.com
      http:
        paths:
        - backend:
            service:
              name: solar-system
              port:
                number: 3000
          path: /prod
          pathType: Prefix
    tls:
    - hosts:
      - a5d9097a40741450284686479be67545-8c4a3a33b5aad34a.elb.us-east-1.amazonaws.com
      secretName: ingress-local-tls
